# frontend

./: .env.example  .gitignore  MIGRATION_SUMMARY.md  README.md  client-sdk.ts  index.html  package-lock.json  package.json  vite.config.ts  wrangler.json
solana-marketplace/: Anchor.toml  CLIENT_USAGE.md  COMPARISON.md  Cargo.toml  DEPLOYMENT.md  Makefile  PROJECT_STRUCTURE.md  README.md  package-lock.json  package.json
solana-marketplace/programs/solana-marketplace/: Cargo.toml
solana-marketplace/programs/solana-marketplace/src/: lib.rs
solana-marketplace/scripts/: deploy.sh  initialize.sh  test-setup.sh
solana-marketplace/src/: lib.rs
solana-marketplace/tests/: solana-marketplace.ts
src/: App.tsx  index.ts  main.tsx  theme.ts  types.d.ts  vite-env.d.ts
src/components/: CreateListingModal.tsx  CreateProfileModal.tsx  ListingCard.tsx  ListingGrid.tsx  ViewProfileModal.tsx
src/config/: idl.ts  solana.ts
src/hooks/: useIPFS.ts  useListing.ts  useProfile.ts  useSolanaListing.ts  useSolanaProfile.ts  useSolanaProgram.ts  useWallet.ts
src/lib/: client-sdk.ts
src/pages/: ListingPage.tsx
