[package]
name = "solana-marketplace"
version = "0.1.0"
description = "A decentralized marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[profile.release]
overflow-checks = true
